[package]
name = "amazons"
version = "0.1.0"
edition = "2021"
authors = ["Arc676/Alessandro Vinciguerra <alesvinciguerra@gmail.com>"]

[dependencies]
eframe = "0.16.0" # Gives us egui, epi and web+native backends
serde = { version = "1", features = ["derive"], optional = true }
image = { version = "0.23", default-features = false, features = ["png"] }

[features]
default = ["persistence"]
persistence = ["eframe/persistence", "serde"]
